2008-04-14  David Smith  <catfish.man@gmail.com>

        Reviewed by Timothy Hatcher.
        
        - Fix https://bugs.webkit.org/show_bug.cgi?id=14258
        Response time vs. download time should be shown in the network profile

        * page/inspector/Resource.js: Change the sorting function to sort by response received time.
        * page/inspector/ResourcesPanel.js: Hook up the existing infrastructure to two bars instead of one; one for the total time, one for the time post-response.
        * page/inspector/inspector.css: Add a new rule to make the waiting bar have a lower opacity, and change the total bar opacity to handle the overlap

2008-04-14  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by Ap.

        Bug 17403: WebKit Creates Invalid Xhtml Links with Ajax
        http://bugs.webkit.org/show_bug.cgi?id=17403

        The previous code had callbacks for the normal parsing (full document) and fragment parsing.
        The difference was induced by the method we were using which did not accept a xmlParserCtxt.
        The code has been refactored to allow us to share the callbacks between the different cases.
        A drawback is that we have to use xmlParseContent which is an internal libxml method and thus
        some internal intialization is done in WebCore.

        Test: fast/parser/ampersand-escaped-parseXMLFragment.xhtml

        * dom/XMLTokenizer.cpp:
        (WebCore::createStringParser): Moved didInit in the global scope as it is shared by the
        2 create methods.

        (WebCore::createMemoryParser): Create a memory parser similar to the previous code.
        Initialize the xmlParserContext to call xmlParseContent in parseXMLDocumentFragment.

        (WebCore::XMLTokenizer::initializeParserContext): Check m_parsingFragment to know
        which create method to call.

        * dom/XMLTokenizer.h: Added parseXMLDocumentFragment as a friend of XMLTokenizer.

2008-04-14  Rob Buis  <buis@kde.org>
