@@ -797,6 +797,9 @@ void AccessibilityObject::getDocumentLinks(Vector<RefPtr<AccessibilityObject> >&
 
 FrameView* AccessibilityObject::documentFrameView() const
 {
+    if (!m_renderer || !m_renderer->document())
+        return 0;
+        
     // this is the RenderObject's Document's Frame's FrameView
     return m_renderer->document()->view();
 }
