@@ -1,3 +1,15 @@
+2008-04-14  Chris Fleizach  <cfleizach@apple.com>
+
+        Reviewed by Darin Adler
+
+        <rdar://problem/5854572> REGRESSION: AXPosition seems to be flipped in nightly build
+        AX was using the wrong method to determine the view to use to create the screen position 
+
+        * page/AccessibilityObject.cpp:
+        (WebCore::AccessibilityObject::documentFrameView):
+        * page/mac/AccessibilityObjectWrapper.mm:
+        (-[AccessibilityObjectWrapper position]):
+
 2008-04-14  David Smith  <catfish.man@gmail.com>
 
         Reviewed by Timothy Hatcher.
